# segagg_emu_imgui

./: .gitmodules  CMakeLists.txt  CPP_CMAKE_TEMPLATE_README.md  README.md
src/: CMakeLists.txt  mytarget.cpp
src/gui/: gui.cpp  gui.h
thirdparty_src/glad/: CMakeLists.txt
thirdparty_src/glad/include/glad/: glad.h
thirdparty_src/glad/src/: glad.c
thirdparty_src/imgui/: CMakeLists.txt
